--- a/templates/mytheme/static/style.css
+++ b/templates/mytheme/static/style.css
@@ -2,6 +2,6 @@ html, body {
     margin: 0;
     border: 0;
     font-size: 100%;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #f50606;
+    color: #000000;
   }
